# oratorio

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Oratorio.sln  README.md  README_ZH.md  build.bat  bump-version.bat  dev.bat
.github/: release_template.md
.github/workflows/: build-multiplatform.yml  docker-publish.yml  pages.yml
cli/: Cargo.toml
cli/src/: command.rs  config.rs  docker.rs  doctor.rs  lib.rs  main.rs  prompt.rs
deploy/: publish-linux.sh
deploy/docker/: .env.example  Dockerfile  docker-compose.yml  oratorio-entrypoint.sh
desktop/: electron.vite.config.ts  package-lock.json  package.json  start.bat  tsconfig.node.json  tsconfig.renderer.json  vite.preview.config.ts  vitest.config.ts
desktop/mcp-apps/: board.html  bridge.ts  item.html  review.html  vite.config.ts
desktop/resources/: icon.icns
docs/: configuration.md  development.md  dotcraft-workspaces.md  getting-started.md  github.md  gitlab.md  index.md  local-support.md  package-lock.json  package.json  server-deployment.md
docs/.vitepress/: config.mts
docs/public/: install.sh
docs/zh/: configuration.md  development.md  dotcraft-workspaces.md  getting-started.md  github.md  gitlab.md  index.md  local-support.md  server-deployment.md
scripts/: bump-version.ps1  screenshot.onboarding.mjs  screenshot.preview.mjs
server/: Oratorio.Server.csproj  Program.cs  appsettings.json
server/Api/: Contracts.cs  Mapping.cs  OratorioApiException.cs  OratorioEndpoints.cs
server/Data/: OratorioDbContext.cs  (+1 more)
specs/: gitlab-integration.md  oratorio-design.md  oratorio-frontend.md
(+230 files in other folders)
