[package]
name = "oratorio-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oratorio"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.16"
